--- a/3Dphysics/PhysicsEngine/PhysicsEngine/PhysicsEngine.vcxproj.filters
+++ b/3Dphysics/PhysicsEngine/PhysicsEngine/PhysicsEngine.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="physics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cylinder_collider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
