--- a/3Dphysics/PhysicsEngine/PhysicsEngine/PhysicsEngine.vcxproj.filters
+++ b/3Dphysics/PhysicsEngine/PhysicsEngine/PhysicsEngine.vcxproj.filters
@@ -42,12 +42,6 @@
     <ClCompile Include="physics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="collision_detection.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="collision_response.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="include\imgui\imgui_widgets.cpp">
       <Filter>Source Files\imgui</Filter>
     </ClCompile>
@@ -65,6 +59,15 @@
     </ClCompile>
     <ClCompile Include="include\imgui\ImGuizmo.cpp">
       <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="GJK.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BarycentricCoordinates.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EPA.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -104,9 +107,6 @@
     <ClInclude Include="collider.h">
       <Filter>Header Files\Physics</Filter>
     </ClInclude>
-    <ClInclude Include="collision_detection.h">
-      <Filter>Header Files\Physics</Filter>
-    </ClInclude>
     <ClInclude Include="cylinder_collider.h">
       <Filter>Header Files\Physics</Filter>
     </ClInclude>
@@ -125,7 +125,13 @@
     <ClInclude Include="sphere_collider.h">
       <Filter>Header Files\Physics</Filter>
     </ClInclude>
-    <ClInclude Include="collision_response.h">
+    <ClInclude Include="GJK.h">
+      <Filter>Header Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="BarycentricCoordinates.h">
+      <Filter>Header Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="EPA.h">
       <Filter>Header Files\Physics</Filter>
     </ClInclude>
   </ItemGroup>
