--- a/3Dphysics/PhysicsEngine/PhysicsEngine/imgui.ini
+++ b/3Dphysics/PhysicsEngine/PhysicsEngine/imgui.ini
@@ -14,17 +14,22 @@ Size=284,189
 Collapsed=0
 
 [Window][FPS Window]
-Pos=6,6
+Pos=20,13
 Size=231,158
 Collapsed=0
 
 [Window][Debug Window]
-Pos=520,1
+Pos=513,-2
 Size=272,275
 Collapsed=0
 
 [Window][Edit Window]
 Pos=6,232
 Size=209,190
+Collapsed=0
+
+[Window][Credits]
+Pos=298,126
+Size=506,321
 Collapsed=0
 
